@@ -202,6 +202,7 @@ exo_url_show_on_screen (const gchar *url,
 {
   const gchar *category = NULL;
   gboolean     result;
+  GString     *escaped_url;
   gchar       *display_name;
   gchar       *local_path;
   gchar       *command;
@@ -315,8 +316,22 @@ exo_url_show_on_screen (const gchar *url,
       return result;
     }
 
+  /* need to escape commata, otherwise firefox and several other helpers cannot handle the URL,
+   * see http://bugzilla.xfce.org/show_bug.cgi?id=2454 for a description of the problem.
+   */
+  escaped_url = g_string_sized_new (128);
+  for (; *url != '\0'; ++url)
+    {
+      if (*url == ',')
+        g_string_append (escaped_url, "%2C");
+      else
+        g_string_append_c (escaped_url, *url);
+    }
+
   /* oki doki then, let's open it */
-  return exo_execute_preferred_application_on_screen (category, url, NULL, envp, screen, error);
+  result = exo_execute_preferred_application_on_screen (category, escaped_url->str, NULL, envp, screen, error);
+  g_string_free (escaped_url, TRUE);
+  return result;
 }
 
 
